--- a/portfolio.html
+++ b/portfolio.html
@@ -12,33 +12,34 @@
         rel="stylesheet" />
     <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" />
+    <link rel="stylesheet" href="./css/main.min.css">
     <link rel="stylesheet" href="./css/styles.css" />
     <title>Portfolio</title>
 </head>
 
 <body>
     <header class="header">
-        <div class="header__content container">
+        <div class="header__content">
             <nav class="navbar">
                 <a class="navbar__logo " href="./index.html"><span class="navbar__logo-text">Web</span>Studio</a>
                 <ul class="navbar__list">
-                    <li class="navbar__items list"><a class="navbar__link link " href="./index.html">Студия</a>
+                    <li class="navbar__items "><a class="navbar__link " href="./index.html">Студия</a>
                     </li>
-                    <li class="navbar__items list"><a class="navbar__link link navbar__link--currnet"
+                    <li class="navbar__items "><a class="navbar__link navbar__link--currnet"
                             href="./portfolio.html">Портфолио</a>
                     </li>
-                    <li class="navbar__items list"><a class="navbar__link link" href="">Контакты</a></li>
+                    <li class="navbar__items "><a class="navbar__link" href="">Контакты</a></li>
                 </ul>
             </nav>
             <ul class="feedback">
-                <li class="feedback__items list"><a class="navbar__link link" href="mailto:info@devstudio.com">
+                <li class="feedback__items "><a class="navbar__link" href="mailto:info@devstudio.com">
                         <svg class="feedback__icons" width="16" height="12">
                             <use href="./images/icons.svg#mail">
                             </use>
                         </svg>
                         info@devstudio.com</a>
                 </li>
-                <li class="feedback__items list"><a class="navbar__link link" href="tel:+380961111111">
+                <li class="feedback__items "><a class="navbar__link" href="tel:+380961111111">
                         <svg class="feedback__icons" width="10" height="16">
                             <use href="./images/icons.svg#phone">
                             </use>
@@ -54,151 +55,151 @@
 
     <main>
         <!-- Filter -->
-        <section class="filtr section">
-            <div class="container">
+        <section class="filter">
+            <div class="filter__group">
                 <ul class="filter__list">
-                    <li class="filter__items list">
+                    <li class="filter__items">
                         <button class="filter__button" type="button">Все</button>
                     </li>
-                    <li class="filter__items list">
+                    <li class="filter__items">
                         <button class="filter__button" type="button">Веб-Сайты</button>
                     </li>
-                    <li class="filter__items list">
+                    <li class="filter__items">
                         <button class="filter__button" type="button">Приложения</button>
                     </li>
-                    <li class="filter__items list">
+                    <li class="filter__items">
                         <button class="filter__button" type="button">Дизайн</button>
                     </li>
-                    <li class="filter__items list">
+                    <li class="filter__items">
                         <button class="filter__button" type="button">Маркетинг</button>
                     </li>
                 </ul>
                 <!-- Projects list -->
                 <ul class="projects__list">
-                    <li class="projects__items list ">
+                    <li class="projects__items ">
                         <div class="projects__overlay">
-                            <img class="projects__photo link" src="./images/tehno.jpg" alt="ТехноКряк" />
-                            <p class="projects_overlay-text projects_overlay-filter">Ресурс предлагает комплексные
+                            <img class="projects__photo" src="./images/tehno.jpg" alt="ТехноКряк" />
+                            <p class="projects__overlay-text projects_overlay-filter">Ресурс предлагает комплексные
                                 предложения с
                                 разным уровнем
                                 функционала и сервисов. Все это позволит посетителю получить
                                 исчерпывающие сведения о компании или частном лице.</p>
                         </div>
-                        <div class="filtr-container ">
+                        <div class="filter__container ">
                             <h2 class="projects__cards">Технокряк</h2>
                             <p class="projects__cards-list">Веб-сайт</p>
                         </div>
                     </li>
-                    <li class="projects__items list">
+                    <li class="projects__items">
                         <div class="projects__overlay">
-                            <img class="projects__photo link" src="./images/poster.jpg" alt="ТехноКряк" />
-                            <p class="projects_overlay-text projects_overlay-filter">Ресурс предлагает комплексные
+                            <img class="projects__photo" src="./images/poster.jpg" alt="ТехноКряк" />
+                            <p class="projects__overlay-text projects_overlay-filter">Ресурс предлагает комплексные
                                 предложения с
                                 разным уровнем
                                 функционала и сервисов. Все это позволит посетителю получить
                                 исчерпывающие сведения о компании или частном лице.</p>
                         </div>
-                        <div class="filtr-container">
+                        <div class="filter__container">
                             <h2 class="projects__cards">Постер New Orlean vs Golden Star</h2>
                             <p class="projects__cards-list">Дизайн</p>
                         </div>
                     </li>
-                    <li class="projects__items list">
+                    <li class="projects__items">
                         <div class="projects__overlay">
-                            <img class="projects__photo link" src="./images/seafood.jpg" alt="ТехноКряк" />
-                            <p class="projects_overlay-text projects_overlay-filter">Ресурс предлагает комплексные
+                            <img class="projects__photo" src="./images/seafood.jpg" alt="ТехноКряк" />
+                            <p class="projects__overlay-text projects_overlay-filter">Ресурс предлагает комплексные
                                 предложения с
                                 разным уровнем
                                 функционала и сервисов. Все это позволит посетителю получить
                                 исчерпывающие сведения о компании или частном лице.</p>
                         </div>
 
-                        <div class="filtr-container">
+                        <div class="filter__container">
                             <h2 class="projects__cards">Ресторан Seafood</h2>
                             <p class="projects__cards-list">Приложение</p>
 
                         </div>
 
                     </li>
-                    <li class="projects__items list">
+                    <li class="projects__items">
                         <div class="projects__overlay">
-                            <img class="projects__photo link" src="./images/prime.jpg" alt="ТехноКряк" />
-                            <p class="projects_overlay-text projects_overlay-filter">Ресурс предлагает комплексные
+                            <img class="projects__photo" src="./images/prime.jpg" alt="ТехноКряк" />
+                            <p class="projects__overlay-text projects_overlay-filter">Ресурс предлагает комплексные
                                 предложения с
                                 разным уровнем
                                 функционала и сервисов. Все это позволит посетителю получить
                                 исчерпывающие сведения о компании или частном лице.</p>
                         </div>
 
-                        <div>
+                        <div class="filter__container">
                             <h2 class="projects__cards">Проект Prime</h2>
                             <p class="projects__cards-list">Маркетинг</p>
                         </div>
                     </li>
-                    <li class="projects__items list">
+                    <li class="projects__items">
                         <div class="projects__overlay">
-                            <img class="projects__photo link" src="./images/boxes.jpg" alt="ТехноКряк" />
-                            <p class="projects_overlay-text projects_overlay-filter">Ресурс предлагает комплексные
+                            <img class="projects__photo" src="./images/boxes.jpg" alt="ТехноКряк" />
+                            <p class="projects__overlay-text projects_overlay-filter">Ресурс предлагает комплексные
                                 предложения с
                                 разным уровнем
                                 функционала и сервисов. Все это позволит посетителю получить
                                 исчерпывающие сведения о компании или частном лице.</p>
                         </div>
 
-                        <div class="filtr-container">
+                        <div class="filter__container">
                             <h2 class="projects__cards">Проект Boxes</h2>
                             <p class="projects__cards-list">Приложение</p>
                         </div>
                     </li>
-                    <li class="projects__items list">
+                    <li class="projects__items">
                         <div class="projects__overlay">
-                            <img class="projects__photo link" src="./images/noborders.jpg" alt="ТехноКряк" />
-                            <p class="projects_overlay-text projects_overlay-filter">Ресурс предлагает комплексные
+                            <img class="projects__photo" src="./images/noborders.jpg" alt="ТехноКряк" />
+                            <p class="projects__overlay-text projects_overlay-filter">Ресурс предлагает комплексные
                                 предложения с
                                 разным уровнем
                                 функционала и сервисов. Все это позволит посетителю получить
                                 исчерпывающие сведения о компании или частном лице.</p>
                         </div>
 
-                        <div class="filtr-container">
+                        <div class="filter__container">
                             <h2 class="projects__cards">Inspiration has no Borders</h2>
                             <p class="projects__cards-list">Веб-сайт</p>
                         </div>
                     </li>
-                    <li class="projects__items list">
+                    <li class="projects__items">
                         <div class="projects__overlay">
-                            <img class="projects__photo link" src="./images/limited.jpg" alt="ТехноКряк" />
-                            <p class="projects_overlay-text projects_overlay-filter">Ресурс предлагает комплексные
+                            <img class="projects__photo" src="./images/limited.jpg" alt="ТехноКряк" />
+                            <p class="projects__overlay-text projects_overlay-filter">Ресурс предлагает комплексные
                                 предложения с
                                 разным уровнем
                                 функционала и сервисов. Все это позволит посетителю получить
                                 исчерпывающие сведения о компании или частном лице.</p>
                         </div>
 
-                        <div class="filtr-container">
+                        <div class="filter__container">
                             <h2 class="projects__cards">Издание Limited Edition</h2>
                             <p class="projects__cards-list">Веб-сайт</p>
                         </div>
                     </li>
-                    <li class="projects__items list">
+                    <li class="projects__items">
                         <div class="projects__overlay">
-                            <img class="projects__photo link" src="./images/lab.jpg" alt="ТехноКряк" />
-                            <p class="projects_overlay-text projects_overlay-filter">Ресурс предлагает комплексные
+                            <img class="projects__photo" src="./images/lab.jpg" alt="ТехноКряк" />
+                            <p class="projects__overlay-text projects_overlay-filter">Ресурс предлагает комплексные
                                 предложения с
                                 разным уровнем
                                 функционала и сервисов. Все это позволит посетителю получить
                                 исчерпывающие сведения о компании или частном лице.</p>
                         </div>
 
-                        <div class="filtr-container">
+                        <div class="filter__container">
                             <h2 class="projects__cards">Проект LAB</h2>
                             <p class="projects__cards-list">Маркетинг</p>
                         </div>
                     </li>
-                    <li class="projects__items list">
+                    <li class="projects__items">
                         <div class="projects__overlay">
-                            <img class="projects__photo link" src="./images/growing.jpg" alt="ТехноКряк" />
-                            <p class="projects_overlay-text projects_overlay-filter">Ресурс предлагает комплексные
+                            <img class="projects__photo" src="./images/growing.jpg" alt="ТехноКряк" />
+                            <p class="projects__overlay-text projects_overlay-filter">Ресурс предлагает комплексные
                                 предложения с
                                 разным уровнем
                                 функционала и сервисов. Все это позволит посетителю получить
@@ -206,7 +207,7 @@
                         </div>
 
 
-                        <div class="filtr-container">
+                        <div class="filter__container">
                             <h2 class="projects__cards">Growing Business</h2>
                             <p class="projects__cards-list">Приложение</p>
                         </div>
@@ -216,19 +217,19 @@
         </section>
     </main>
     <footer class="footer">
-        <div class="footer__info container">
+        <div class="footer__info">
             <div>
-                <a class="footer__logo link" href="./index.html" target="_blank" rel="noopener noreferrer">
+                <a class="footer__logo " href="./index.html" target="_blank" rel="noopener noreferrer">
                     <span class="footer__logo-text">Web</span>Studio</a>
                 <address>
                     <ul class="footer__nav">
-                        <li class="footer__list list"><a class="footer__adress link "
-                                href="https://goo.gl/maps/Vx1k762oTrEUdPKi6" rel="noopener noreferrer ">
+                        <li class="footer__list"><a class="footer__adress" href="https://goo.gl/maps/Vx1k762oTrEUdPKi6"
+                                rel="noopener noreferrer ">
                                 г. Киев, пр-т Леси
                                 Украинки, 26</a></li>
-                        <li class="footer__list list"><a class="footer__feedback link "
+                        <li class="footer__list"><a class="footer__feedback "
                                 href="mailto:info@example.com">info@example.com</a></li>
-                        <li class="footer__list list"><a class="footer__feedback link " href="tel:+380991111111">+38
+                        <li class="footer__list"><a class="footer__feedback" href="tel:+380991111111">+38
                                 099 111
                                 11
                                 11</a></li>
@@ -239,8 +240,8 @@
                 <h2 class="footer__social-title">ПРИСОЕДЕНЯЙТЕСЬ</h2>
 
                 <ul class="footer__social-list">
-                    <li class="footer__social_items list">
-                        <a class="footer__social-link link" href="https://instagram.com" target="_blank"
+                    <li class="footer__social-items">
+                        <a class="footer__social-link" href="https://instagram.com" target="_blank"
                             rel="noopener noreferrer" aria-label="instagram">
                             <svg class="footer__icon">
                                 <use href="./images/icons.svg#instagram">
@@ -248,8 +249,8 @@
                             </svg>
                         </a>
                     </li>
-                    <li class="footer__social_items list">
-                        <a class="footer__social-link link" href="https://twitter.com/" target="_blank"
+                    <li class="footer__social-items">
+                        <a class="footer__social-link" href="https://twitter.com/" target="_blank"
                             rel="noopener noreferrer" aria-label="twitter">
                             <svg class="footer__icon">
                                 <use href="./images/icons.svg#twitter">
@@ -257,8 +258,8 @@
                             </svg>
                         </a>
                     </li>
-                    <li class=" footer__social_items list">
-                        <a class="footer__social-link link" href="https://facebook.com/" target="_blank"
+                    <li class=" footer__social-items">
+                        <a class="footer__social-link" href="https://facebook.com/" target="_blank"
                             rel="noopener noreferrer" aria-label="facebook">
                             <svg class="footer__icon">
                                 <use href="./images/icons.svg#facebook">
@@ -266,8 +267,8 @@
                             </svg>
                         </a>
                     </li>
-                    <li class="footer__social_items list">
-                        <a class="footer__social-link link" href="https://linkedin.com/" target="_blank"
+                    <li class="footer__social-items">
+                        <a class="footer__social-link" href="https://linkedin.com/" target="_blank"
                             rel="noopener noreferrer" aria-label="linkedin">
                             <svg class="footer__icon">
                                 <use href="./images/icons.svg#linkedin">
